--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,3 +6,10 @@ nav:
   - OPF Format: opf-format.md
   - Importers: importers.md
   - Exporters: exporters.md
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+      - name: mermaid
+        class: mermaid
+        format: !!python/name:pymdownx.superfences.fence_code_format ''
+  - pymdownx.tabbed
